# cookbook

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: codespell.yml  documentation.yml  release-documentation.yml  ruff.yml
cookbook/: __init__.py
doc/: highlights.csv
doc/user_guide/: getting_started.rst  index.rst
examples/: README.rst
examples/genomic/: README.rst  plot_mostest.py  plot_mostest_tuto.py
examples/io/: README.rst  plot_cifti.py  plot_crypt_file.py
examples/latent/: README.rst  plot_cpca.py  plot_rsa.py
examples/plotting/: plot_surface.py  plot_tractogram.py
stable/: .buildinfo  authors.html  ci.html  contributing.html  index.html  license.html  maintenance.html  quickstart.html  search.html  searchindex.js  sg_execution_times.html  versions.html  whats_new.html
stable/_downloads/9a1d46b8dad16e020df94add00d43477/: plot_mostest.py
stable/_downloads/9d9c2f19ee6da0638b17771b81bb4174/: plot_mostest.ipynb
stable/_sources/: sg_execution_times.rst.txt  versions.rst.txt
stable/_sources/auto_examples/genomic/: plot_mostest.rst.txt  sg_execution_times.rst.txt
stable/_sources/auto_examples/io/: plot_cifti.rst.txt  plot_crypt_file.rst.txt  sg_execution_times.rst.txt
stable/_sources/auto_examples/latent/: plot_cpca.rst.txt  plot_rsa.rst.txt  sg_execution_times.rst.txt
stable/_sources/auto_examples/plotting/: plot_surface.rst.txt  sg_execution_times.rst.txt
stable/_sources/user_guide/: getting_started.rst.txt
stable/auto_examples/: index.html  sg_execution_times.html
stable/auto_examples/datasets/: index.html  sg_execution_times.html
stable/auto_examples/genomic/: index.html  plot_mostest.html  sg_execution_times.html
stable/auto_examples/io/: index.html  plot_cifti.html  plot_crypt_file.html  sg_execution_times.html
stable/auto_examples/latent/: index.html  plot_cpca.html  plot_rsa.html  sg_execution_times.html
stable/auto_examples/plotting/: index.html  plot_surface.html  sg_execution_times.html
stable/modules/: index.html  search.html
stable/user_guide/: getting_started.html  index.html
