[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "cookbook"
readme = "README.rst"
requires-python = ">=3.12"
authors = [{name = "cookbook developers"}]
license = "CECILL-B"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "nibabel",
    "nilearn",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "boto3",
    "tqdm",
    "dipy",
    "fury",
    "anndata",
    "torch",
    "torchvision",
]
dynamic = ["version"]

[project.optional-dependencies]
ci = [
    "codespell",
    "pycodestyle",
    "ruff",
]
doc = [
    "setuptools",
    "pysphinxdoc @ git+https://github.com/AGrigis/pysphinxdoc.git@dev",
]

[project.urls]
Development = "https://github.com/neurospin-projects/cookbook"
issues = "https://github.com/neurospin-projects/cookbook/issues"
homepage = "https://neurospin-projects.github.io/cookbook/stable"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "cookbook._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
cookbook = [
    "resources/*",
]

[tool.ruff]
preview = true
extend-exclude = [
    "tests",
]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "E",
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
    "W293", # blank-line-with-whitespace
    "W291", # trailing whitespace
    "E203", # whitespace before ':'
    "E501", # line too long (226 > 79 characters)
]
ignore = [
    "D401",     # First line of docstring should be in imperative mood
    "D205",     # 1 blank line required between summary line and description
    "D200",     # One-line docstring should fit on one line
    "D210",     # whitespaces allowed surrounding docstring text
    "D105",     # Missing docstring in magic method
    "RUF001",   # String contains ambiguous `ℹ` (INFORMATION SOURCE)
    "FURB189",  # `dict` can be error prone, use `collections.UserDict`
    "RUF067",   # `__init__` module should only contain docstrings and re-exports
]
select = ["D"]   # enable pycodestyle and docstring rules

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.codespell]
builtin = "clear,rare,en-GB_to_en-US"
ignore-words = "./.github/codespellignore.txt"
skip = "./.git,*.bib,./cookbook/resources/*,./AUTHORS.rst"
quiet-level = 2

[tool.pydoclint]
style = "numpy"
require-return-section-when-returning-nothing = false
check-arg-order = true
check-return-types = true
check-class-attributes = true
check-style-mismatch = true
check-arg-defaults = false
skip-checking-raises = false
treat-property-methods-as-class-attributes = true
should-document-private-class-attributes = true
